# FileCompressionTool

./: CMakeLists.txt  README.md  compressor.cpp  compressor.h  decompressor.cpp  decompressor.h  file_utils.cpp  file_utils.h  main.cpp  server.cpp
